Check that the wheel is python and architecture independent

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -94,3 +94,6 @@ jobs:
           echo ""
           echo "Distributions:"
           ls -alh dist/
+
+      - name: Check wheel
+        run: test $(find dist/ -name *-none-any.whl | wc -l) -gt 0
