Allow failure in Windows with Python 3.8

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,6 +9,7 @@ jobs:
   build-and-test:
     name: 'Python${{ matrix.python-version }}@${{ matrix.os }}'
     runs-on: ${{ matrix.os }}
+#    continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
         python-version:
@@ -19,6 +20,25 @@ jobs:
           - ubuntu-20.04
           - macos-latest
           - windows-latest
+#        experimental: []
+        include:
+          - os: windows-latest
+            python-version: 3.8
+            experimental: true
+#          - os: windows-latest
+#            python-version: 3.8
+#            experimental: true
+
+#        include:
+#          - os: windows-latest
+#            python-version: 3.6
+#            experimental: false
+#          - os: windows-latest
+#            python-version: 3.7
+#            experimental: false
+#          - os: windows-latest
+#            python-version: 3.8
+#            experimental: true
 
     steps:
 
@@ -56,6 +76,7 @@ jobs:
 
       - name: "Test example: SWIG + NumPy"
         shell: bash
+        continue-on-error: ${{ matrix.experimental }}
         run: |
           pip install wheel ninja cmake numpy
           cd examples/swig
