--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -118,3 +118,10 @@ jobs:
 
       - name: Check wheel
         run: test $(find dist/ -name *-none-any.whl | wc -l) -gt 0
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
+          skip_existing: true
