--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -51,7 +51,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Python tools
-        run: pip install setuptools_scm pytest
+        run: pip install pytest
 
       - name: Install cmake-build-extensions
         run: pip install -v .
