--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           brew install swig
           # https://cibuildwheel.readthedocs.io/en/stable/cpp_standards
-          echo "::set-env name=MACOSX_DEPLOYMENT_TARGET::10.14"
+          echo "MACOSX_DEPLOYMENT_TARGET=10.14" >> $GITHUB_ENV
 
       - name: Example dependencies [Ubuntu]
         if: matrix.os == 'ubuntu-20.04'
