--- a/examples/swig/pyproject.toml
+++ b/examples/swig/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=40.8.0", "setuptools_scm", "cmake_build_extension", "wheel", "numpy"]
+requires = ["setuptools>=40.8.0", "setuptools_scm[toml]>=3.4", "cmake_build_extension", "wheel", "numpy"]
 build-backend = "setuptools.build_meta"
