--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -83,10 +83,6 @@ jobs:
       ((github.event_name == 'push' && github.ref == 'refs/heads/master') ||
        (github.event_name == 'release'))
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        python-version:
-          - 3.8
 
     steps:
 
@@ -96,7 +92,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
 
       - name: Install Python tools
         run: pip install setuptools_scm wheel
