Add testing extras_require

--- a/examples/swig/setup.cfg
+++ b/examples/swig/setup.cfg
@@ -24,3 +24,10 @@ install_requires = numpy
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+testing =
+    pytest
+    pytest-icdiff
+all =
+    %(testing)s
