--- a/setup.cfg
+++ b/setup.cfg
@@ -53,3 +53,10 @@ where = src
 
 [bdist_wheel]
 universal = 1
+
+[options.extras_require]
+testing =
+    pytest
+    pytest-icdiff
+all =
+    %(testing)s
