Now cmake-build-extension is a required dependency

--- a/examples/swig/setup.cfg
+++ b/examples/swig/setup.cfg
@@ -20,7 +20,9 @@ packages = find:
 package_dir =
     =src
 python_requires = >=3.6
-install_requires = numpy
+install_requires =
+    numpy
+    cmake-build-extension
 
 [options.packages.find]
 where = src
