Test example against the correct commit, without downloading from PyPI

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -59,9 +59,9 @@ jobs:
         shell: bash
         continue-on-error: ${{ matrix.experimental }}
         run: |
-          cd examples/swig
-          pip install -v .
-          pytest -sv tests
+          pip install numpy
+          pip install --no-build-isolation -v ./examples/swig
+          pytest -sv examples/swig/tests
 
   publish:
     name: 'Publish to PyPI'
