--- a/examples/swig/setup.cfg
+++ b/examples/swig/setup.cfg
@@ -33,3 +33,7 @@ testing =
     pytest-icdiff
 all =
     %(testing)s
+
+[options.entry_points]
+console_scripts =
+    print_answer = mymath.bin.__main__:main
