--- a/example/setup.cfg
+++ b/example/setup.cfg
@@ -28,12 +28,16 @@ install_requires =
 where = src
 
 [options.extras_require]
-testing =
+test =
     pytest
     pytest-icdiff
 all =
-    %(testing)s
+    %(test)s
 
 [options.entry_points]
 console_scripts =
     print_answer = mymath.bin.__main__:main
+
+[tool:pytest]
+addopts = -rsxX -v
+testpaths = tests
