--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cmake-build-extension
-description = Setuptools extension to build and package CMake projects
+description = Setuptools extension to build and package CMake projects.
 long_description = file: README.md; charset=UTF-8
 long_description_content_type = text/markdown
 author = Diego Ferigo
@@ -52,10 +52,3 @@ install_requires =
 
 [options.packages.find]
 where = src
-
-[options.extras_require]
-testing =
-    pytest
-    pytest-icdiff
-all =
-    %(testing)s
