--- a/example/setup.cfg
+++ b/example/setup.cfg
@@ -36,7 +36,8 @@ all =
 
 [options.entry_points]
 console_scripts =
-    print_answer = mymath.bin.__main__:main
+    print_answer_swig = mymath_swig.bin.__main__:main
+    print_answer_pybind11 = mymath_pybind11.bin.__main__:main
 
 [tool:pytest]
 addopts = -rsxX -v
