--- a/example/pyproject.toml
+++ b/example/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "setuptools_scm[toml]>=6.0",
     "cmake_build_extension",
     "numpy",
+    "pybind11",
 ]
 build-backend = "setuptools.build_meta"
 
