--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Build and install example
         working-directory: example
         run: pip install -v .[all]
+        env:
+          # Pretend to be using cibuildwheel
+          CIBUILDWHEEL: 1
 
       - name: Test example
         working-directory: example
