Document the setup.cfg of the example

--- a/example/setup.cfg
+++ b/example/setup.cfg
@@ -1,17 +1,17 @@
 [metadata]
 name = mymath
-description = Example to show how to use cmake-build-extension with CMake, SWIG and NumPy
+description = Example to show how to use cmake-build-extension with CMake, SWIG and NumPy.
 long_description = file: README.md; charset=UTF-8
 long_description_content_type = text/markdown
 author = Diego Ferigo
 author_email = dgferigo@gmail.com
 license = MIT
 platforms = any
-url = https://github.com/diegoferigo/cmake-build-extension
+url = https://github.com/diegoferigo/cmake-build-extension/tree/master/example
 project_urls =
-    Source = https://github.com/diegoferigo/cmake-build-extension
-    Tracker = https://github.com/diegoferigo/cmake-build-extensionn/issues
-keywords = setuptools extension cmake build package pypi swig
+    Source  = https://github.com/diegoferigo/cmake-build-extension/tree/master/examples/swig
+    Tracker = https://github.com/diegoferigo/cmake-build-extension/issues
+keywords = setuptools extension cpp cmake build package pypi bindings swig pybind11
 classifiers =
 
 [options]
@@ -22,6 +22,8 @@ package_dir =
 python_requires = >=3.6
 install_requires =
     numpy
+    # This requirement is only necessary if the build_extension_env
+    # context manager is used in the top-level __init__.py
     cmake-build-extension
 
 [options.packages.find]
@@ -34,6 +36,10 @@ test =
 all =
     %(test)s
 
+# This also requires using the "expose_binaries" option in setup.py.
+# It creates a generic <package>.bin.__main__ file that is exposed
+# as <env>/bin/<executable_name> that relays all input arguments to
+# the C++ executable.
 [options.entry_points]
 console_scripts =
     print_answer_swig = mymath_swig.bin.__main__:main
