Add the swig and pybind11 target files to a 'bindings' install component

--- a/example/bindings_pybind11/CMakeLists.txt
+++ b/example/bindings_pybind11/CMakeLists.txt
@@ -23,6 +23,7 @@ set_target_properties(pybind11_bindings PROPERTIES
 # Install the pybind11 library
 install(
     TARGETS pybind11_bindings
+    COMPONENT bindings
     LIBRARY DESTINATION ${MYMATH_INSTALL_PREFIX}
     ARCHIVE DESTINATION ${MYMATH_INSTALL_PREFIX}
     RUNTIME DESTINATION ${MYMATH_INSTALL_PREFIX})
