Fix long_description in setup.cfg

--- a/example/setup.cfg
+++ b/example/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = mymath
 description = Example to show how to use cmake-build-extension with CMake, SWIG and NumPy.
-long_description = file: README.md; charset=UTF-8
+long_description = file: README.md
 long_description_content_type = text/markdown
 author = Diego Ferigo
 author_email = dgferigo@gmail.com
