--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = cmake-build-extension
 description = Setuptools extension to build and package CMake projects.
-long_description = file: README.md; charset=UTF-8
+long_description = file: README.md
 long_description_content_type = text/markdown
 author = Diego Ferigo
 author_email = dgferigo@gmail.com
@@ -11,8 +11,9 @@ platforms = any
 url = https://github.com/diegoferigo/cmake-build-extension
 
 project_urls =
+    Changelog = https://github.com/diegoferigo/cmake-build-extension/releases
     Source = https://github.com/diegoferigo/cmake-build-extension
-    Tracker = https://github.com/diegoferigo/cmake-build-extensionn/issues
+    Tracker = https://github.com/diegoferigo/cmake-build-extension/issues
 
 keywords =
     setuptools
