--- a/example/pyproject.toml
+++ b/example/pyproject.toml
@@ -1,7 +1,10 @@
 [build-system]
 requires = [
     "wheel",
+    # Check the updated version pinning requirements in:
+    # https://github.com/pypa/setuptools_scm
     "setuptools",
+    "setuptools_scm[toml]",
     "cmake_build_extension",
     "numpy",
     "pybind11",
