Remove Python 3.6. Windows w/ Python 3.7 as optional. (#38)
* Remove Python 3.6, mark failing 3.7 job as experimental

* Add comment, replace experimental with optional

* Update example/pyproject.toml

Co-authored-by: Diego Ferigo <dgferigo@gmail.com>

--- a/example/pyproject.toml
+++ b/example/pyproject.toml
@@ -1,8 +1,10 @@
 [build-system]
 requires = [
     "wheel",
-    "setuptools>=45",
-    "setuptools_scm[toml]>=6.0",
+    # Check the updated version pinning requirements in:
+    # https://github.com/pypa/setuptools_scm
+    "setuptools",
+    "setuptools_scm[toml]",
     "cmake_build_extension",
     "numpy",
     "pybind11",
