--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -16,21 +16,22 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - 3.6
           - 3.7
           - 3.8
           - 3.9
           - "3.10"
+          # - "3.11" # Add once stable release is out.
         os:
           - ubuntu-20.04
           - macos-latest
           - windows-latest
         include:
-          # Building this entry fails with the following error:
-          # math.h:91:12: error: 'std::_hypot' has not been declared
+          - optional: false
+          # Mark the Windows Python3.7 run as optional, as executing the examples throws the following error:
+          #   ImportError: DLL load failed: The specified procedure could not be found.
           - os: windows-latest
-            python-version: 3.6
-            experimental: true
+            python-version: 3.7
+            optional: true
 
     steps:
 
@@ -38,7 +39,7 @@ jobs:
       - run: git fetch --prune --unshallow
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -66,7 +67,7 @@ jobs:
           sudo apt install build-essential swig libeigen3-dev
 
       - name: Build and install example
-        continue-on-error: ${{ matrix.experimental }}
+        continue-on-error: ${{ matrix.optional }}
         working-directory: example
         run: pip install -v .[all]
         env:
@@ -74,7 +75,7 @@ jobs:
           CIBUILDWHEEL: 1
 
       - name: Test example
-        continue-on-error: ${{ matrix.experimental }}
+        continue-on-error: ${{ matrix.optional }}
         working-directory: example
         run: pytest
 
